--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <description>Minigames in one region</description>
     <properties>
         <java.version>11</java.version>
-        <core.version>4.0.0-SNAPSHOT</core.version>
+        <core.version>4.0.2</core.version>
         <minigamecore.version>1.0-SNAPSHOT</minigamecore.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
