--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,5 @@ authors: [ HSGamer ]
 description: Minigames in one region
 softdepend:
   - HolographicDisplays
+  - DecentHolograms
   - PlaceholderAPI
