--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
         <dependency>
             <groupId>com.github.lewysDavies</groupId>
             <artifactId>Java-Probability-Collection</artifactId>
-            <version>v0.8</version>
+            <version>f5764010bb</version>
         </dependency>
         <dependency>
             <groupId>com.github.cryptomorin</groupId>
